[package]
name = "ezza-2903"
version = "0.1.0"
edition = "2024"
authors = ["Farhan Kurnia Pratama <farhnkrnapratma@gmail.com>"]
description = "Optimized and secure ezza-2903 encryption module using XChaCha20-Poly1305 AEAD"
license = "GPL-3.0-or-later"
repository = "https://github.com/yourusername/encryption_module"
keywords = ["encryption", "crypto", "AEAD", "XChaCha20-Poly1305"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
aead = { version = "0.5", features = ["getrandom"] }
xchacha20poly1305 = { package = "chacha20poly1305", version = "0.10.1" }
zeroize = "1.5"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }

